lib/nanosvg.h

typedef struct NSVGshape
{
  NSVGpaint fill;       // Fill paint
  NSVGpaint stroke;     // Stroke paint
  float opacity;        // Opacity of the shape.
  float strokeWidth;      // Stroke width (scaled)
  float bounds[4];      // Tight bounding box of the shape [minx,miny,maxx,maxy].
  NSVGpath* paths;      // Linked list of paths in the image.
  struct NSVGshape* next;   // Pointer to next shape, or NULL if last element.
} NSVGshape;
typedef struct NSVGimage
{
  float width;        // Width of the image.
  float height;       // Height of the image.
  NSVGshape* shapes;      // Linked list of shapes in the image.
} NSVGimage;
// Parses SVG file from a file, returns SVG image as paths.
NSVGimage* nsvgParseFromFile(const char* filename, const char* units, float dpi);
// Parses SVG file from a null terminated string, returns SVG image as paths.
NSVGimage* nsvgParse(char* input, const char* units, float dpi);
// Deletes list of paths.
void nsvgDelete(NSVGimage* image);
typedef struct NSVGparser
{
  NSVGattrib attr[NSVG_MAX_ATTR];
  int attrHead;
  float* pts;
  int npts;
  int cpts;
  NSVGpath* plist;
  NSVGimage* image;
  NSVGgradientData* gradients;
  float viewMinx, viewMiny, viewWidth, viewHeight;
  int alignX, alignY, alignType;
  float dpi;
  char pathFlag;
  char defsFlag;
} NSVGparser;
NSVGimage* nsvgParse(char* input, const char* units, float dpi)
{
  NSVGparser* p;
  NSVGimage* ret = 0;

  p = nsvg__createParser();
  if (p == NULL) {
    return NULL;
  }
  p->dpi = dpi;

  nsvg__parseXML(input, nsvg__startElement, nsvg__endElement, nsvg__content, p);

  // Scale to viewBox
  nsvg__scaleToViewbox(p, units);

  ret = p->image;
  p->image = NULL;

  nsvg__deleteParser(p);

  return ret;
}
NSVGimage* nsvgParseFromFile(const char* filename, const char* units, float dpi)
{
  FILE* fp = NULL;
  int size;
  char* data = NULL;
  NSVGimage* image = NULL;

  fp = fopen(filename, "rb");
  if (!fp) goto error;
  fseek(fp, 0, SEEK_END);
  size = ftell(fp);
  fseek(fp, 0, SEEK_SET);
  data = (char*)malloc(size+1);
  if (data == NULL) goto error;
  fread(data, size, 1, fp);
  data[size] = '\0';  // Must be null terminated.
  fclose(fp);
  image = nsvgParse(data, units, dpi);
  free(data);

  return image;

error:
  if (fp) fclose(fp);
  if (data) free(data);
  if (image) nsvgDelete(image);
  return NULL;
}
void nsvgDelete(NSVGimage* image)
{
  NSVGshape *snext, *shape;
  if (image == NULL) return;
  shape = image->shapes;
  while (shape != NULL) {
    snext = shape->next;
    nsvg__deletePaths(shape->paths);
    nsvg__deletePaint(&shape->fill);
    nsvg__deletePaint(&shape->stroke);
    free(shape);
    shape = snext;
  }
  free(image);
}