lib/nanosvgrast.h

typedef struct NSVGrasterizer NSVGrasterizer;
/* Example Usage:
  // Load SVG
  struct SNVGImage* image = nsvgParseFromFile("test.svg.");

  // Create rasterizer (can be used to render multiple images).
  struct NSVGrasterizer* rast = nsvgCreateRasterizer();
  // Allocate memory for image
  unsigned char* img = malloc(w*h*4);
  // Rasterize
  nsvgRasterize(rast, image, 0,0,1, img, w, h, w*4);
*/

// Allocated rasterizer context.
NSVGrasterizer* nsvgCreateRasterizer();
// Rasterizes SVG image, returns RGBA image (non-premultiplied alpha)
//   r - pointer to rasterizer context
//   image - pointer to image to rasterize
//   tx,ty - image offset (applied after scaling)
//   scale - image scale
//   dst - pointer to destination image data, 4 bytes per pixel (RGBA)
//   w - width of the image to render
//   h - height of the image to render
//   stride - number of bytes per scaleline in the destination buffer
void nsvgRasterize(NSVGrasterizer* r,
           NSVGimage* image, float tx, float ty, float scale,
           unsigned char* dst, int w, int h, int stride);
// Deletes rasterizer context.
void nsvgDeleteRasterizer(NSVGrasterizer*);
typedef struct NSVGedge {
   float x0,y0, x1,y1;
   int dir;
   struct NSVGedge* next;
} NSVGedge;
typedef struct NSVGactiveEdge {
  int x,dx;
  float ey;
  int dir;
  struct NSVGactiveEdge *next;
} NSVGactiveEdge;
typedef struct NSVGmemPage {
  unsigned char mem[NSVG__MEMPAGE_SIZE];
  int size;
  struct NSVGmemPage* next;
} NSVGmemPage;
typedef struct NSVGcachedPaint {
  char type;
  char spread;
  float xform[6];
  unsigned int colors[256];
} NSVGcachedPaint;
struct NSVGrasterizer
{
  float px, py;

  struct NSVGedge* edges;
  int nedges;
  int cedges;

  NSVGactiveEdge* freelist;
  NSVGmemPage* pages;
  NSVGmemPage* curpage;

  unsigned char* scanline;
  int cscanline;

  unsigned char* bitmap;
  int width, height, stride;
};
NSVGrasterizer* nsvgCreateRasterizer()
{
  NSVGrasterizer* r = (NSVGrasterizer*)malloc(sizeof(NSVGrasterizer));
  if (r == NULL) goto error;
  memset(r, 0, sizeof(NSVGrasterizer));

  return r;

error:
  nsvgDeleteRasterizer(r);
  return NULL;
}
void nsvgDeleteRasterizer(NSVGrasterizer* r)
{
  NSVGmemPage* p;

  if (r == NULL) return;

  p = r->pages;
  while (p != NULL) {
    NSVGmemPage* next = p->next;
    free(p);
    p = next;
  }

  if (r->edges) free(r->edges);
  if (r->scanline) free(r->scanline);

  free(r);
}
void nsvgRasterize(NSVGrasterizer* r,
           NSVGimage* image, float tx, float ty, float scale,
           unsigned char* dst, int w, int h, int stride)
{
  NSVGshape *shape = NULL;
  NSVGedge *e = NULL;
  NSVGcachedPaint cache;
  int i;

  r->bitmap = dst;
  r->width = w;
  r->height = h;
  r->stride = stride;

  if (w > r->cscanline) {
    r->cscanline = w;
    r->scanline = (unsigned char*)realloc(r->scanline, w);
    if (r->scanline == NULL) return;
  }

  for (i = 0; i < h; i++)
    memset(&dst[i*stride], 0, w*4);

  for (shape = image->shapes; shape != NULL; shape = shape->next) {

    if (shape->fill.type == NSVG_PAINT_NONE)
      continue;

    nsvg__resetPool(r);
    r->freelist = NULL;
    r->nedges = 0;

    nsvg__flattenShape(r, shape, scale);

    // Scale and translate edges
    for (i = 0; i < r->nedges; i++) {
      e = &r->edges[i];
      e->x0 = tx + e->x0 * scale;
      e->y0 = (ty + e->y0 * scale) * NSVG__SUBSAMPLES;
      e->x1 = tx + e->x1 * scale;
      e->y1 = (ty + e->y1 * scale) * NSVG__SUBSAMPLES;
    }

    // Rasterize edges
    qsort(r->edges, r->nedges, sizeof(NSVGedge), nsvg__cmpEdge);

    // now, traverse the scanlines and find the intersections on each scanline, use non-zero rule
    nsvg__initPaint(&cache, &shape->fill, shape->opacity);

    nsvg__rasterizeSortedEdges(r, tx,ty,scale, &cache);
  }

  nsvg__unpremultiplyAlpha(dst, w, h, stride);

  r->bitmap = NULL;
  r->width = 0;
  r->height = 0;
  r->stride = 0;
}