src/bindings.rs

#[test]
fn bindgen_test_layout_NSVGimage() {
    assert_eq!(::std::mem::size_of::<NSVGimage>() , 16usize , concat ! (
               "Size of: " , stringify ! ( NSVGimage ) ));
    assert_eq! (::std::mem::align_of::<NSVGimage>() , 8usize , concat ! (
                "Alignment of " , stringify ! ( NSVGimage ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const NSVGimage ) ) . width as * const _ as
                usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( NSVGimage ) , "::" ,
                stringify ! ( width ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const NSVGimage ) ) . height as * const _ as
                usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! ( NSVGimage ) , "::" ,
                stringify ! ( height ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const NSVGimage ) ) . shapes as * const _ as
                usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( NSVGimage ) , "::" ,
                stringify ! ( shapes ) ));
}
impl Clone for NSVGimage {
    fn clone(&self) -> Self { *self }
}
extern "C" {
    pub fn nsvgParseFromFile(filename: *const ::std::os::raw::c_char,
                             units: *const ::std::os::raw::c_char, dpi: f32)
     -> *mut NSVGimage;
}
extern "C" {
    pub fn nsvgParse(input: *mut ::std::os::raw::c_char,
                     units: *const ::std::os::raw::c_char, dpi: f32)
     -> *mut NSVGimage;
}
extern "C" {
    pub fn nsvgDelete(image: *mut NSVGimage);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct NSVGrasterizer {
    _unused: [u8; 0],
}
extern "C" {
    pub fn nsvgCreateRasterizer() -> *mut NSVGrasterizer;
}
extern "C" {
    pub fn nsvgRasterize(r: *mut NSVGrasterizer, image: *mut NSVGimage,
                         tx: f32, ty: f32, scale: f32,
                         dst: *mut ::std::os::raw::c_uchar,
                         w: ::std::os::raw::c_int, h: ::std::os::raw::c_int,
                         stride: ::std::os::raw::c_int);
}
extern "C" {
    pub fn nsvgDeleteRasterizer(arg1: *mut NSVGrasterizer);
}
